# centrolign

./: CMakeLists.txt  LICENSE  README.md
include/: append_component.hpp  determinize.hpp  gcsa.hpp  gesa.hpp  graph.hpp  integer_sort.hpp  path_graph.hpp  range_min_query.hpp  sparse_table.hpp  topological_order.hpp  utility.hpp
include/centrolign/: adjacency_graph.hpp  alignment.hpp  anchorer.hpp  antichain_partition.hpp  average_constrained_partition.hpp  bit_packed_vector.hpp  bonder.hpp  bridges.hpp  cactus.hpp  chain_cycle_graph.hpp  chain_merge.hpp  compacted_graph.hpp  connected_components.hpp  core.hpp  count_walks.hpp  determinize.hpp  esa.hpp  execution.hpp  forward_edges.hpp  fuse.hpp  gesa.hpp  gfa.hpp  graph.hpp  inconsistency_identifier.hpp  induced_match_finder.hpp  integer_sort.hpp  is_acyclic.hpp  labeled_graph.hpp  logging.hpp  match_bank.hpp  match_finder.hpp  max_search_tree.hpp  minmax_distance.hpp  modify_graph.hpp  multi_queue_thread_pool.hpp  new_parameters.hpp  orthogonal_max_search_tree.hpp  packed_forward_edges.hpp  packed_match_bank.hpp  packed_path_merge.hpp  (+41 more)
src/: alignment.cpp  anchorer.cpp  bit_packed_vector.cpp  bonder.cpp  chain_merge.cpp  compacted_graph.cpp  core.cpp  determinize.cpp  esa.cpp  execution.cpp  gcsa.cpp  gesa.cpp  gfa.cpp  graph.cpp  inconsistency_identifier.cpp  induced_match_finder.cpp  logging.cpp  main.cpp  match_finder.cpp  modify_graph.cpp  multi_queue_thread_pool.cpp  new_parameters.cpp  packed_vector.cpp  parameters.cpp  partitioner.cpp  path_esa.cpp  path_graph.cpp  path_merge.cpp  range_unique_query.cpp  simplifier.cpp  stitcher.cpp  structure_tree.cpp  superbubble_distance_oracle.cpp  superbubbles.cpp  test_util.cpp  thread_pool.cpp  threading.cpp  tree.cpp  tree_distance_oracle.cpp  trie.cpp  (+3 more)
src/scripts/: compare_truth_aln.cpp  find_universal_bridges.cpp  make_snp_mat.cpp  make_var_mat.cpp  remove_samples.cpp  sim_centromere.cpp  tree_compare.cpp  tree_pair_dist.cpp
src/test/: test_alignment.cpp  test_anchoring.cpp  test_bit_packed_vector.cpp  test_bonder.cpp  test_cactus.cpp  test_chain_merge.cpp  test_compacted_graph.cpp  test_gesa.cpp  test_gfa.cpp  test_graph_algs.cpp  test_inconsistency_identifier.cpp  test_match_finding.cpp  test_max_search_tree.cpp  test_new_parameters.cpp  test_orthogonal_max_search_tree.cpp  test_parameters.cpp  test_partition_algorithms.cpp  test_path_esa.cpp  test_path_graph.cpp  test_rank_support.cpp  test_rmq.cpp  test_ruq.cpp  test_simplifier.cpp  test_stitcher.cpp  test_superbubble_distance_oracle.cpp  test_superbubbles.cpp  test_threading.cpp  test_tree.cpp  test_trie.cpp  test_utility_algs.cpp
